@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>com.example.shelldemo</groupId>
@@ -9,12 +10,16 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>shdemmo-app</artifactId>
+  <artifactId>dbscriptrunner</artifactId>
   <packaging>jar</packaging>
   <name>Shell Demo Application</name>
   <description>Oracle Database Utilities with Spring Shell Interface</description>
 
   <dependencies>
+        <dependency>
+          <groupId>com.opencsv</groupId>
+          <artifactId>opencsv</artifactId>
+      </dependency>
     <!-- Oracle JDBC Driver -->
     <dependency>
       <groupId>com.oracle.database.jdbc</groupId>
@@ -78,26 +83,30 @@
       <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
 
   <build>
     <plugins>
       <!-- Runs unit tests -->
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.1</version>
         <configuration>
-          <skipTests>false</skipTests>
-          <forkCount>0</forkCount>
-          <reuseForks>false</reuseForks>
-          <includes>
-            <include>**/*Test.java</include>
-          </includes>
-          <argLine>
-            @{argLine}
-            --add-opens java.base/java.lang=ALL-UNNAMED
-            --add-opens java.base/java.util=ALL-UNNAMED
-            --add-opens java.base/java.time=ALL-UNNAMED
-          </argLine>
+            <forkCount>1</forkCount>
+            <reuseForks>false</reuseForks>
+            <useSystemClassLoader>true</useSystemClassLoader>
+            <properties>
+                <configurationParameters>
+                    junit.jupiter.displayname.generator.default=org.junit.jupiter.api.DisplayNameGenerator$ReplaceUnderscores
+                </configurationParameters>
+            </properties>
+            <reportFormat>plain</reportFormat>
+            <trimStackTrace>false</trimStackTrace>
+            <useFile>false</useFile>
+            <detail>true</detail>
+            <redirectTestOutputToFile>false</redirectTestOutputToFile>
         </configuration>
       </plugin>
 
